--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -69,7 +69,7 @@ h1 {
 
 .navigation a {
     text-decoration: none;
-    color: var(--primary-text);
+    color: var(--primary-bg);
     font-size: 1.5rem;
     font-family: "Open Sans", sans-serif;
     font-weight: 500;
@@ -253,11 +253,10 @@ footer {
 
 .hero-text .join-us {
     background-color: var(--join-btn-bg);
-    color: white;
+    color: var(--primary-bg);
     padding: 0.75rem 1.5rem;
     border-radius: 0.5rem;
     text-decoration: none;
-    font-weight: bold;
     font-size: clamp(1rem, 2.5vw, 1.5rem);
     transition: background-color 0.3s ease;
 }
